<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >






    <Button
        android:id="@+id/button1"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/editunder5" />



    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/personname"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliniccard" />


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/penta1" />

    <EditText
        android:id="@+id/dateDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" android:enabled="false" android:visibility="gone">

        <requestFocus />
    </EditText>


    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/penta3" />

    <EditText
        android:id="@+id/dateDisplay1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" android:enabled="false" android:visibility="gone"/>


    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mealses" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" android:enabled="false" android:visibility="gone"/>


    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullyimmunized" />


    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitamina" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:prompt="@string/prompt"
        android:entries="@array/malnutrition"/>



    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout></ScrollView>