<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/startPickDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob" />

    <EditText
        android:id="@+id/startDateDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="date" />

    <Button
        android:id="@+id/endPickDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dod" />

    <EditText
        android:id="@+id/endDateDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="date" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

<RadioGroup
    android:id="@+id/radiogroup1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
             />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
</RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/ic_done" />

</LinearLayout>
</ScrollView>