<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/pickDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setbd" />

    <EditText
        android:id="@+id/dateDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date" android:enabled="false"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="date"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
<RadioGroup
    android:id="@+id/radioGroup1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
             />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
</RadioGroup>
    </LinearLayout>
    <LinearLayout android:weightSum="100" android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="51dp"
        android:layout_weight="16"
        android:text="@string/submit" />
    
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="51dp"
        android:layout_height="51dp"
       
        android:src="@drawable/ic_done" />
    
</LinearLayout>